--- a/index.html
+++ b/index.html
@@ -1,37 +1,121 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
-    <link rel="stylesheet" href="styles.css">
-    <title>A tribute to the father of the "Green Revolution".</title>
-    <meta charset="utf-8">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" />
   </head>
   <body>
-    <main id="main">
-      <h1 id="title">Dr. Norman Borlaug</h1>
-      <p>The man who saved a billion lives</p>
-      <figure id="img-div">
-        <img id="image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr. Norman Borlaug seen standing in Mexican wheat field with a group of biologists">
-        <figcaption id="img-caption">
-      Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger. 
-        </figcaption>
-      </figure>
-      <section id="tribute-info">
-        <h3><b>Here's a time line of Dr. Borlaug's life:</b> <br> <br></h3>
-        <ul>
-          <li><b>1914</b> - Born in Cresco, Iowa.</li><br>
-          <li><b>1933</b> - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration".</li><br>
-        </ul>
+    <div id="page-wrapper">
+      <header id="header">
+        <div class="logo">
+          <img id="header-img" src="" alt="Logo de la empresa" />
+        </div>
+        <nav id="nav-bar">
+          <ul>
+            <li><a class="nav-link" href="#features">Características</a></li>
+            <li><a class="nav-link" href="#how-it-works">Nuestro trabajo</a></li>
+            <li><a class="nav-link" href="#pricing">Precios</a></li>
+          </ul>
+        </nav>
+      </header>
 
-        <blockquote cite="http://news.rediff.com/report/2009/sep/14/pm-pays-tribute-to-father-of-green-revolution-borlaug.htm">
-          <p>
-            "Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."
-          </p>
-          <cite>-- Indian Prime Minister Manmohan Singh</cite>
-        </blockquote>
-        <h3>
-          If you have time, you should read more about this incredible human being on his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia entry</a>.
-        </h3>
+      <div class="container"></div>
+
+      <section id="hero">
+        <h2>Las comidas más ricas, hechas por nosotros</h2>
+        <form id="form" action="https://www.freecodecamp.com/email-submit">
+          <input name="email" id="email" type="email" placeholder="Ingresa tu correo electrónico" required
+          />
+          <input id="submit" type="submit" value="Empezemos" class="btn" />
+        </form>
       </section>
-    </main>
+      <div class="container">
+        <section id="features">
+          <div class="grid">
+            <div class="icon"><i class="fa fa-3x fa-fire"></i></div>
+            <div class="desc">
+              <h2>Materia prima de excelencia</h2>
+              <p>
+                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum.
+              </p>
+            </div>
+          </div>
+          <div class="grid">
+            <div class="icon"><i class="fa fa-3x fa-truck"></i></div>
+            <div class="desc">
+              <h2>Envíos rápidos</h2>
+              <p>
+                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum.
+              </p>
+            </div>
+          </div>
+          <div class="grid">
+            <div class="icon">
+              <i class="fa fa-3x fa-battery-full" aria-hidden="true"></i>
+            </div>
+            <div class="desc">
+              <h2>Seguridad garantizada</h2>
+              <p>
+                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum.
+              </p>
+            </div>
+          </div>
+        </section>
+        <section id="how-it-works">
+          <iframe
+            id="video"
+            height="315"
+            src=""
+            frameborder="0"
+            allowfullscreen
+          ></iframe>
+        </section>
+        <section id="pricing">
+          <div class="product" id="tenor">
+            <div class="level">Docena de empanadas</div>
+            <h2>$600</h2>
+            <ol>
+              <li>Lorem ipsum.</li>
+              <li>Lorem ipsum.</li>
+              <li>Lorem ipsum dolor.</li>
+              <li>Lorem ipsum.</li>
+            </ol>
+            <button class="btn">Seleccionar</button>
+          </div>
+          <div class="product" id="bass">
+            <div class="level">Pizzas</div>
+            <h2>$900</h2>
+            <ol>
+              <li>Lorem ipsum.</li>
+              <li>Lorem ipsum.</li>
+              <li>Lorem ipsum dolor.</li>
+              <li>Lorem ipsum.</li>
+            </ol>
+            <button class="btn">Seleccionar</button>
+          </div>
+          <div class="product" id="valve">
+            <div class="level">Milanesas</div>
+            <h2>$1200</h2>
+            <ol>
+              <li>Plays similar to a Trumpet</li>
+              <li>Great for Jazz Bands</li>
+              <li>Lorem ipsum dolor.</li>
+              <li>Lorem ipsum.</li>
+            </ol>
+            <button class="btn">Seleccionar</button>
+          </div>
+        </section>
+        <footer>
+          <ul>
+            <li><a href="#">Privacidad</a></li>
+            <li><a href="#">Términos</a></li>
+            <li><a href="#">Contacto</a></li>
+          </ul>
+          <span>Copyright 2023, nombre de la empresa</span>
+        </footer>
+      </div>
+    </div>
   </body>
 </html>
