--- a/index.html
+++ b/index.html
@@ -1,277 +1,36 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <title>Drafteados - NBA en español</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script src="https://kit.fontawesome.com/15705b4c95.js" crossorigin="anonymous"></script>
-        <link rel="icon" href="descarga.png">
-        <style>
-            body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
-            body, html {
-                height: 100%;
-                color: #777;
-                line-height: 1.8;
-            }
-
-            .bgimg-1, .bgimg-2, .bgimg-3 {
-                background-attachment: fixed;
-                background-position: center;
-                background-repeat: no-repeat;
-                background-size: cover;
-            }
-
-            .bgimg-1 {
-                background-image: url('drafteados.jpg');
-                min-height: 100%; 
-            }
-
-            .bgimg-2 {
-                background-image: url("/w3images/parallax2.jpg");
-                min-height: 400px;
-            }
-
-            .bgimg-3 {
-                background-image: url("/w3images/parallax3.jpg");
-                min-height: 400px;
-            }
-
-            .w3-wide {
-                letter-spacing: 10px;
-            }
-
-            .w3-hover-opacity {
-                cursor: pointer;
-            }
-
-            @media only screen and (max-device-width: 1600px) {
-                .bgimg-1, .bgimg-2, .bgimg-3 {
-                    background-attachment: scroll;
-                    min-height: 400px;
-                }
-            }
-        </style>
-    </head>
-    <body>
-
-<div class="w3-top">
-  <div class="w3-bar" id="myNavbar">
-    <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
-      <i class="fa fa-bars"></i>
-    </a>
-    <a href="#home" class="w3-bar-item w3-button w3-hide-small"><i class="fa-solid fa-house"></i> TU CASA NBA</a>
-    <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ACERCA DE NOSOTROS</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACTO</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
-    </a>
-  </div>
-
-  <!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-    <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
-    <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
-    <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button">SEARCH</a>
-  </div>
-</div>
-
-<div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
-  <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">MY <span class="w3-hide-small">WEBSITE</span> LOGO</span>
-  </div>
-</div>
-
-<div class="w3-content w3-container w3-padding-64" id="about">
-  <h3 class="w3-center">ACERCA DE NOSOTROS</h3>
-  <p class="w3-center"><em>La NBA es nuestra pasión</em></p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-    qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-  <div class="w3-row">
-    <div class="w3-col m6 w3-center w3-padding-large">
-      <p><b><i class="fa fa-user w3-margin-right"></i>¿Quiénes somos?</b></p><br>
-      <img src="AdN.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Foto de nosotros" width="500" height="333">
-    </div>
-
-    <!-- Hide this text on small devices -->
-    <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>Bienvenido a nuestro sitio web. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-  </div>
-  <p class="w3-large w3-center w3-padding-16">¿Qué hacemos?</p>
-  <p class="w3-wide"><i class="fa fa-camera"></i>YouTube</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:100%">Video diario durante la temporada NBA</div>
-  </div>
-  <p class="w3-wide"><i class="fa fa-laptop"></i>Twitch</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:100%">Directos ocasionales, incluyendo colaboraciones especiales</div>
-  </div>
-  <p class="w3-wide"><i class="fa fa-photo"></i>Demás redes sociales</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:100%">Contenido adicional disponible en Tik Tok, Twitter e Instagram</div>
-  </div>
-</div>
-
-<div class="w3-row w3-center w3-dark-grey w3-padding-16">
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">289 k +</span><br>
-    Suscriptores en YouTube
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">1.7 k +</span><br>
-    Videos en YouTube
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">30+</span><br>
-    Productos disponibles en nuestra tienda
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">Desde el 9 de abril de 2017</span><br>
-    Ya sumamos 115.000.000 vistas
-  </div>
-</div>
-
-<div class="bgimg-2 w3-display-container w3-opacity-min">
-  <div class="w3-display-middle">
-    <span class="w3-xxlarge w3-text-white w3-wide">PORTFOLIO</span>
-  </div>
-</div>
-
-<div class="w3-content w3-container w3-padding-64" id="portfolio">
-  <h3 class="w3-center">NUESTRO TRABAJO</h3>
-  <p class="w3-center"><em>Estos son algunos de nuestros videos destacados.<br> Haz click para verlos.</em></p><br>
-
-  <div class="w3-row-padding w3-center">
-    <div class="w3-col m3">
-      <img src="/w3images/p1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="/w3images/p2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="/w3images/p3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="/w3images/p4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="">
-    </div>
-  </div>
-
-  <div class="w3-row-padding w3-center w3-section">
-    <div class="w3-col m3">
-      <img src="/w3images/p5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="/w3images/p6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="/w3images/p7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="/w3images/p8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="">
-    </div>
-    <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px"></button>
-  </div>
-</div>
-
-<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
-  <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
-  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-    <img id="img01" class="w3-image">
-    <p id="caption" class="w3-opacity w3-large"></p>
-  </div>
-</div>
-
-<div class="bgimg-3 w3-display-container w3-opacity-min">
-  <div class="w3-display-middle">
-     <span class="w3-xxlarge w3-text-white w3-wide">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ipsa excepturi, totam rem at obcaecati enim expedita exercitationem, veniam, delectus facilis pariatur fugiat dolorum accusantium? Eaque laudantium praesentium cumque corporis.</span>
-  </div>
-</div>
-
-<div class="w3-content w3-container w3-padding-64" id="contact">
-  <h3 class="w3-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam dicta earum animi fugiat cupiditate amet ullam maiores provident ab necessitatibus, magni alias exercitationem dolor quisquam iste rerum, consequatur, perferendis porro!</h3>
-  <p class="w3-center"><em></em></p>
-
-  <div class="w3-row w3-padding-32 w3-section">
-    <div class="w3-col m4 w3-container">
-      <img src="/w3images/map.jpg" class="w3-image w3-round" style="width:100%">
-    </div>
-    <div class="w3-col m8 w3-panel">
-      <div class="w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam veniam iure laborum perspiciatis ut culpa fugit porro maiores dolorum, odit quasi dolore, eos amet quam tempore necessitatibus. Repellendus, aspernatur magnam.<br>
-        <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis dolor corporis, aliquam voluptates mollitia optio nostrum, quae fuga quisquam harum ipsa nihil. Cum voluptatum fuga aliquid iure odio quisquam debitis!<br>
-        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: mail@mail.com<br>
-      </div>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, blanditiis. Fuga debitis quae illum tempora obcaecati velit minima esse quo nihil ut minus, facilis qui repellendus non quidem voluptates quaerat. <i class="fa fa-coffee"></i></p>
-      <form action="/action_page.php" target="_blank">
-        <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-          <div class="w3-half">
-            <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
-          </div>
-          <div class="w3-half">
-            <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
-          </div>
-        </div>
-        <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-        <button class="w3-button w3-black w3-right w3-section" type="submit">
-          <i class="fa fa-paper-plane"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti maxime delectus accusamus et, laborum odio quidem aspernatur sapiente, nostrum minus iste voluptatum. Impedit ex possimus consequuntur nulla explicabo autem dolorem?
-        </button>
-      </form>
-    </div>
-  </div>
-</div>
-
-<footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>Volver al inicio</a>
-  <div class="w3-xlarge w3-section">
-    <a href="https://www.youtube.com/@DrafteadosNBA" target="_blank"><i class="fa fa-youtube w3-hover-opacity"></i></a>
-    <a href="https://www.instagram.com/drafteados/" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-    <a href="https://twitter.com/drafteados" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
-    <a href="https://open.spotify.com/show/7z8tSXAARFiF7LvC5lwnwl?si=36fbc1ede60e4b5b&nd=1" target="_blank"><i class="fa fa-spotify w3-hover-opacity"></i></a>
-    <a href="https://www.twitch.tv/drafteadosnba" target="_blank"><i class="fa fa-twitch w3-hover-opacity"></i></a>
-    <a href="https://www.tiktok.com/@drafteadosnba?lang=es" target="_blank"><i class="fa-brands fa-tiktok w3-hover-opacity"></i></a>
-  </div>
-</footer>
- 
-<script>
-
-function onClick(element) {
-  document.getElementById("img01").src = element.src;
-  document.getElementById("modal01").style.display = "block";
-  var captionText = document.getElementById("caption");
-  captionText.innerHTML = element.alt;
-}
-
-window.onscroll = function() {myFunction()};
-function myFunction() {
-    var navbar = document.getElementById("myNavbar");
-    if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-        navbar.className = "w3-bar" + " w3-card" + " w3-animate-top" + " w3-white";
-    } else {
-        navbar.className = navbar.className.replace(" w3-card w3-animate-top w3-white", "");
-    }
-}
-
-function toggleFunction() {
-    var x = document.getElementById("navDemo");
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-    } else {
-        x.className = x.className.replace(" w3-show", "");
-    }
-}
-</script>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Practicando proyectos" />
+    <title></title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <div class="container">
+      <header class="header">
+        <h1 id="title" class="text-center">Formulario de encuesta</h1>
+        <p id="description" class="description text-center">Te agradecemos por tomarte el tiempo de completar este formulario</p>
+      </header>
+    <form id="survey-form">
+      <label id="name-label">Nombre </label>
+      <input type="text" id="name" placeholder="Ingresa tu nombre" class="form-control" required>
+      <label id="email-label">Email </label>
+      <input type="email" id="email" placeholder="Ingresa tu email" class="form-control" required>
+      <label id="number-label">Edad </label>
+      <input type="number" id="number" min="14" max="99" placeholder="Tu edad (debes ser mayor de 14 años)" class="form-control" />
+      <textarea>
+      </textarea>
+      <input type="submit" id="submit" required>
+      <select id="dropdown">
+        <option>Business</option>
+        <option>Promotions</option>
+        <input type="radio" name="account-type" value="radbut">
+        <input type="radio" name="account-type" value="radbut">
+        <input type="checkbox" value="tac">
+        <input type="checkbox" value="tac">
+      </select>
+    </form>
+  </body>
 </html>
