--- a/index.html
+++ b/index.html
@@ -1,36 +1,89 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Practicando proyectos" />
-    <title></title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <title>Documentación Técnica</title>
   </head>
   <body>
-    <div class="container">
-      <header class="header">
-        <h1 id="title" class="text-center">Formulario de encuesta</h1>
-        <p id="description" class="description text-center">Te agradecemos por tomarte el tiempo de completar este formulario</p>
-      </header>
-    <form id="survey-form">
-      <label id="name-label">Nombre </label>
-      <input type="text" id="name" placeholder="Ingresa tu nombre" class="form-control" required>
-      <label id="email-label">Email </label>
-      <input type="email" id="email" placeholder="Ingresa tu email" class="form-control" required>
-      <label id="number-label">Edad </label>
-      <input type="number" id="number" min="14" max="99" placeholder="Tu edad (debes ser mayor de 14 años)" class="form-control" />
-      <textarea>
-      </textarea>
-      <input type="submit" id="submit" required>
-      <select id="dropdown">
-        <option>Business</option>
-        <option>Promotions</option>
-        <input type="radio" name="account-type" value="radbut">
-        <input type="radio" name="account-type" value="radbut">
-        <input type="checkbox" value="tac">
-        <input type="checkbox" value="tac">
-      </select>
-    </form>
+    <nav id="navbar">
+      <header>Documentación de JS</header>
+      <ul>
+        <li>
+          <a class="nav-link" href="#Introducción">Introducción</a>
+        </li>
+        <li>
+          <a class="nav-link" href="#Lo_que_ya_deberías_saber">Lo que ya deberías saber</a>
+        </li>
+        <li>
+          <a class="nav-link" href="#JavaScript_y_Java">JavaScript y Java</a>
+        </li>
+        <li>
+          <a class="nav-link" href="#Hola_mundo">Hola mundo</a>
+        </li>
+        <li>
+          <a class="nav-link" href="#Variables">Variables</a>
+        </li>
+        <li>
+          <a class="nav-link" href="#Declarando_Variables">Declarando variables</a>
+        </li>
+      </ul>
+    </nav>
+    <main id="main-doc">
+      <section class="main-section" id="Introducción">
+        <header>Introducción</header>
+        <p>JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight language. Inside a host environment (for example, a web browser), JavaScript can be connected to the objects of its environment to provide programmatic control over them.</p>
+        <p>JavaScript contains a standard library of objects, such as Array, Date, and Math, and a core set of language elements such as operators, control structures, and statements. Core JavaScript can be extended for a variety of purposes by supplementing it with additional objects; for example:</p>
+        <ul>
+          <li>Client-side JavaScript extends the core language by supplying objects to control a browser and its Document Object Model (DOM). For example, client-side extensions allow an application to place elements on an HTML form and respond to user events such as mouse clicks, form input, and page navigation.</li>
+          <li>Server-side JavaScript extends the core language by supplying objects relevant to running JavaScript on a server. For example, server-side extensions allow an application to communicate with a database, provide continuity of information from one invocation to another of the application, or perform file manipulations on a server.</li>
+        </ul>
+        <p></p>
+      </section>
+      <section class="main-section" id="Lo_que_ya_deberías_saber">
+        <header>Lo que ya deberías saber</header>
+        <p></p>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+        <code></code>
+        <p></p>
+      </section>
+      <section class="main-section" id="JavaScript_y_Java">
+        <header>JavaScript y Java</header>
+        <p></p>
+        <code></code>
+        <code></code>
+        <code></code>
+        <p></p>
+      </section>
+      <section class="main-section" id="Hola_mundo">
+        <header>Hola mundo</header>
+        <p></p>
+        <code></code>
+        <code></code>
+        <code></code>
+        <p></p>
+      </section>
+      <section class="main-section" id="Variables">
+        <header>Variables</header>
+        <p></p>
+        <code></code>
+        <code></code>
+        <code></code>
+        <p></p>
+      </section>
+      <section class="main-section" id="Declarando_Variables">
+        <header>Declarando variables</header>
+        <p></p>
+        <code></code>
+        <code></code>
+        <code></code>
+        <p></p>
+      </section>
+    </main>
   </body>
 </html>
